# MinutemanCTF24-Release

./: README.md
arg/checkpoint_1/: info.yaml
arg/checkpoint_two/: info.yaml
crypto/cribbing_csv/: info.yaml  solve.py
crypto/hardcountered/: Dockerfile  docker-compose.yaml  flag.txt  info.yaml
crypto/impeccabletiming/: Dockerfile  docker-compose.yaml  flag.txt  info.yaml  main.py
crypto/macforgery/: Dockerfile  docker-compose.yaml  flag.txt  info.yaml
crypto/radicalstuff/: Dockerfile  docker-compose.yaml  flag.txt  info.yaml  main.py  public_keys.txt
crypto/rigthedeck/: docker-compose.yaml  flag.txt  info.yaml  main.py
crypto/rivals_cipher/: info.yaml  remake_chall.py  solve.py
crypto/spoilingthejoke/: info.yaml
crypto/xorring/: info.yaml  solve.py
forensics/batman-begins-again/: Dockerfile  answer_server.py  docker-compose.yaml  info.yaml
forensics/batman-gone-fishing/: answer_server.py  docker-compose.yaml  info.yaml
forensics/hiddenintheprotocol/: info.yaml
forensics/inception/: info.yaml
forensics/intro-pcap/: info.yaml
forensics/memory-forensics-1/: answer_server.py  docker-compose.yaml  info.yaml
forensics/minute-meta/: info.yaml
forensics/mr-file-table/: info.yaml
forensics/robotic-theft/: dns-exfil.py  info.yaml
forensics/tcp-packet/: info.yaml
forensics/wheres-batman/: answer_server.py  docker-compose.yaml  info.yaml
hardware/gates/: info.yaml
hardware/led-blink/sim/: CMakeLists.txt
hardware/led-blink/sim/include/: sim.h
hardware/led-blink/sim/libs/simavr/lib/: libsimavr.so.1
hardware/led-blink/sim/src/: sim.c
(+272 files in other folders)
